# wipeout-rewrite

./: .gitignore  CMakeLists.txt  vcpkg.json
cmake/vcpkg/triplets/: x64-mingw-dynamic-debug.cmake
source/include/: audio.hpp  input.h  main.hpp  mem.h  render.h  state.hpp  system.h  types.h  utils.h  video.hpp
source/include/wipeout/: camera.h  droid.h  game.h  hud.h  image.h  ingame_menus.h  menu.h  object.h  particle.h  race.h  scene.h  sfx.h  ship.h  ship_ai.h  ship_player.h  title.h  track.h  ui.h  weapon.h
source/src/: audio.cpp  main.cpp  platform.c  render.c  system.cpp  video.cpp
source/src/wipeout/: camera.c  droid.c  game.c  game.cpp  hud.c  image.c  image.cpp  ingame_menus.c  intro.c  intro.cpp  main_menu.c  main_menu.cpp  menu.c  object.c  object.cpp  particle.c  race.c  race.cpp  scene.c  sfx.c  sfx.cpp  ship.c  ship_ai.c  ship_player.c  title.c  track.c  track.cpp  ui.c  weapon.c
